[package]
name = "oxiplayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
id3 = "1.14.0"
image = "0.25.2"
rodio = "0.19.0"
slint = "1.7.2"

[build-dependencies]
slint-build = "1.7.2"
